--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -83,101 +83,149 @@
                     android:textSize="22sp"
                     android:textStyle="bold" />
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                <RelativeLayout 
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:padding="1dp"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="#ffffff"
-                    android:padding="4dp"
-                    android:paddingBottom="4dp" >
-
-                    <ImageView
-                        android:id="@+id/ivBottomGradient"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_alignParentLeft="true"
-                        android:src="@drawable/ic_pin_mini_green" />
-
-                    <TextView
-                        android:id="@+id/tvLocation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/ivBottomGradient"
-                        android:layout_marginLeft="20dp"
-                        android:layout_toRightOf="@+id/ivBottomGradient"
-                        android:text="@string/location"
-                        android:textSize="14sp" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+	                android:layout_marginRight="16dp"
+                    android:background="#c8c8c8"
+                    >
+                
+	                <RelativeLayout
+	                    android:layout_width="match_parent"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginBottom="8dp" 
+	                    android:background="#ffffff"
+	                    
+	                    android:padding="4dp"
+	                    android:paddingBottom="4dp" >
+	
+	                    <ImageView
+	                        android:id="@+id/ivBottomGradient"
+	                        android:layout_width="25dp"
+	                        android:layout_height="25dp"
+	                        android:layout_marginLeft="16dp"
+	                        android:layout_alignParentLeft="true"
+	                        android:src="@drawable/ic_pin_mini_green" />
+	
+	                    <TextView
+	                        android:id="@+id/tvLocation"
+	                        android:layout_width="wrap_content"
+	                        android:layout_height="wrap_content"
+	                        android:layout_alignTop="@+id/ivBottomGradient"
+	                        android:layout_marginLeft="20dp"
+	                        android:layout_toRightOf="@+id/ivBottomGradient"
+	                        android:text="@string/location"
+	                        android:textSize="14sp" />
+	                </RelativeLayout>
+				</RelativeLayout>
+				<RelativeLayout 
+                    
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="1dp"
+                    android:paddingLeft="1dp"
+                    android:paddingRight="1dp"
+                    android:layout_marginLeft="16dp"
+	                android:layout_marginRight="16dp"
+                    android:background="#c8c8c8"
                     android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="#ffffff"
-                    android:padding="4dp"
-                    android:paddingBottom="4dp" >
-
-                    <ImageView
-                        android:id="@+id/ivFavorited"
-                        android:layout_width="20dp"
-                        android:layout_height="20dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_centerVertical="true"
-                        android:src="@drawable/ic_person_mini_green" />
-
-                    <TextView
-                        android:id="@+id/tvArtist"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignTop="@+id/ivFavorited"
-                        android:layout_marginLeft="20dp"
-                        android:layout_toRightOf="@+id/ivFavorited"
-                        android:text="@string/artist"
-                        android:textSize="14sp" />
+                    >
+	                <RelativeLayout
+	                    android:layout_width="match_parent"
+	                    android:layout_height="wrap_content"
+	                    
+	                    android:background="#ffffff"
+	                    android:padding="4dp"
+	                    android:paddingBottom="4dp" >
+	
+	                    <ImageView
+	                        android:id="@+id/imageView2"
+	                        android:layout_width="25dp"
+	                        android:layout_height="25dp"
+	                        android:layout_marginLeft="16dp"
+	                        android:layout_alignParentLeft="true"
+	                        android:layout_centerVertical="true"
+	                        android:src="@drawable/ic_person_mini_green" />
+	
+	                    <TextView
+	                        android:id="@+id/tvArtist"
+	                        android:layout_width="wrap_content"
+	                        android:layout_height="wrap_content"
+	                        android:layout_alignTop="@+id/imageView2"
+	                        android:layout_marginLeft="20dp"
+	                        android:layout_toRightOf="@+id/imageView2"
+	                        android:text="@string/artist"
+	                        android:textSize="14sp" />
+	                </RelativeLayout>
+                
                 </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+				
+				<RelativeLayout 
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:padding="1dp"
+                    android:background="#c8c8c8"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    android:background="#0dcb00"
-                    android:padding="4dp"
-                    android:paddingBottom="4dp" >
-
-                    <TextView
-                        android:id="@+id/tvDescriptionHeader"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="false"
-                        android:text="@string/description"
-                        android:textColor="#fff"
-                        android:textSize="18sp" />
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
+                    
+                    >
+	                
+	                <RelativeLayout
+	                    android:layout_width="match_parent"
+	                    android:layout_height="wrap_content"
+	                    
+	                    
+	                    android:background="#0dcb00"
+	                    android:padding="4dp"
+	                    android:paddingBottom="4dp" >
+	
+	                    <TextView
+	                        android:id="@+id/tvDescriptionHeader"
+	                        android:layout_width="wrap_content"
+	                        android:layout_height="wrap_content"
+	                        android:layout_alignParentTop="true"
+	                        android:layout_centerHorizontal="false"
+	                        android:text="@string/description"
+	                        android:textColor="#fff"
+	                        android:textSize="18sp" />
+	                </RelativeLayout>
+				
+				</RelativeLayout>
+                
+                <RelativeLayout 
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="16dp"
+                    android:paddingBottom="1dp"
+                    android:paddingLeft="1dp"
+                    android:paddingRight="1dp"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:background="#fff"
-                    android:padding="4dp"
-                    android:paddingBottom="4dp" >
-
-                    <TextView
-                        android:id="@+id/tvDescriptionText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="false"
-                        android:text="TextView"
-                        android:textSize="14sp" />
+	                android:layout_marginRight="16dp"
+                    android:background="#c8c8c8"
+                    android:layout_marginBottom="24dp"
+                    >
+	                
+	                <RelativeLayout
+	                    android:layout_width="match_parent"
+	                    android:layout_height="wrap_content"
+	                    android:layout_marginBottom="16dp"
+	                    
+	                    android:background="#fff"
+	                    android:padding="4dp"
+	                    android:paddingBottom="4dp" >
+	
+	                    <TextView
+	                        android:id="@+id/tvDescriptionText"
+	                        android:layout_width="wrap_content"
+	                        android:layout_height="wrap_content"
+	                        android:layout_alignParentTop="true"
+	                        android:layout_centerHorizontal="false"
+	                        android:text="TextView"
+	                        android:textSize="14sp" />
+	              
+	               </RelativeLayout>
+                
                 </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
