--- a/kARTography/res/layout/poi_detail.xml
+++ b/kARTography/res/layout/poi_detail.xml
@@ -44,13 +44,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
+            
+            <TextView
+                android:id="@+id/tvSpacer"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="Uploaded by "
+                android:textSize="12sp" />
+            
             <TextView
                 android:id="@+id/tvUploaderHeader"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="@string/uploader"
-                android:textSize="12sp" />
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@+id/tvSpacer"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/tvDateText"
@@ -77,8 +87,8 @@
                     android:id="@+id/tvPhotoTitle"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="35dp"
+                    android:layout_marginTop="25dp"
                     android:text="@string/title_photo"
                     android:textSize="22sp"
                     android:textStyle="bold" />
@@ -88,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:padding="1dp"
                     android:layout_marginLeft="16dp"
-	                android:layout_marginRight="16dp"
+                    android:layout_marginRight="16dp"
                     android:background="#c8c8c8"
                     >
                 
@@ -97,7 +107,6 @@
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="8dp" 
 	                    android:background="#ffffff"
-	                    
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
@@ -135,7 +144,6 @@
 	                <RelativeLayout
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
-	                    
 	                    android:background="#ffffff"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
@@ -169,15 +177,12 @@
                     android:background="#c8c8c8"
                     android:layout_marginLeft="16dp"
                     android:layout_marginRight="16dp"
-                    
                     >
 	                
 	                <RelativeLayout
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
-	                    
-	                    
-	                    android:background="#0dcb00"
+	                    android:background="#087f00"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
@@ -186,6 +191,7 @@
 	                        android:layout_width="wrap_content"
 	                        android:layout_height="wrap_content"
 	                        android:layout_alignParentTop="true"
+							android:layout_margin="2dp"
 	                        android:layout_centerHorizontal="false"
 	                        android:text="@string/description"
 	                        android:textColor="#fff"
@@ -210,13 +216,13 @@
 	                    android:layout_width="match_parent"
 	                    android:layout_height="wrap_content"
 	                    android:layout_marginBottom="16dp"
-	                    
 	                    android:background="#fff"
 	                    android:padding="4dp"
 	                    android:paddingBottom="4dp" >
 	
 	                    <TextView
 	                        android:id="@+id/tvDescriptionText"
+	                        android:layout_margin="2dp"
 	                        android:layout_width="wrap_content"
 	                        android:layout_height="wrap_content"
 	                        android:layout_alignParentTop="true"
@@ -228,6 +234,9 @@
                 
                 </RelativeLayout>
             </LinearLayout>
+
+            
+
         </RelativeLayout>
     </ScrollView>
 
